2009-04-15 Alexander Malysh <amalysh at kannel.org> 
    * utils/mtbatch.c: applied patch that add DLR support for mtbatch.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-04-14 Alexander Malysh <amalysh at kannel.org>
    * test/decode_emimsg.c: moved to utils.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-04-07 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwmem.h: fixed compiler warnings about strdup redefine.

2009-04-06  Stipe Tolj  <stolj at kannel.org>
    * gwlib/gwmem.h: fixed typo from previous commit set. NLC.
    
2009-04-06 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gwmem-check.c, gwlib/gwmem-native.c, gwlib/gwmem.h: applied patch
      that adds gw_calloc function and speedup a gw_strdup.
      Thanks to "Nikos Balkanas" <nbalkanas at gmail.com> for this patch.

2009-04-03 Alexander Malysh <amalysh at kannel.org>
    * utils/mtbatch.c: applied patch that fixes #495.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.

2009-04-02 Alexander Malysh <amalysh at kannel.org>
    * gwlib/thread.[ch]: fixed compilation failure if compiled with
      '--enable-mutex-stats'.
      Thanks to "Nikos Balkanas" <nbalkanas at gmail.com> for report.

2009-04-02 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed issue that return code 1 of conn_write
      that indicated still data buffered but no error was interpreted
      as error.
      Thanks to "Raf Coremans" <raco at mach.com> who spotted and reported
      this issue.

2009-04-01 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: handle partial SMPP v3.4 DLR support, when
      receipted_message_id received but not the dlrstat.

2009-03-30 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: applied patch that fixes octsr_copy length.
      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.
