@@ -1,4 +1,7 @@
 2009-04-15 Alexander Malysh <amalysh at kannel.org> 
+    * gw/smsc/smsc_at.c: fixed error path that we didn't close device.
+
+2009-04-15 Alexander Malysh <amalysh at kannel.org> 
     * utils/mtbatch.c: applied patch that add DLR support for mtbatch.
       Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.
 
